--- a/public/style.css
+++ b/public/style.css
@@ -8,15 +8,27 @@ html{
     font-size: 62.5%;
 }
 
-body{
-    font-size: 1.5rem;
-    background: rgba(133, 133, 177, 0.3);
-}
-
-content{
+header{
+    font-size: 4rem;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 4rem;
+}
+
+body{
+    font-family: sans-serif;
+    font-size: 2rem;
+    background: rgba(208, 208, 233, 0.3);
+}
+
+.content{
+    display: flex;
+    justify-content: center;
+    gap: 4rem;
+    align-items: center;
+
 }
 
 
